--- a/hugo.yaml
+++ b/hugo.yaml
@@ -251,3 +251,7 @@ params:
 
   #customScripts: -| # You can add custom scripts which will be added before </body> tag
   #  <script type="text/javascript"><!-- any script here --></script>
+
+caches:
+  images:
+    dir: :cacheDir/images
