--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "http://localhost:1313/"
+baseURL: "https://bizshim.github.io/resume/"
 languageCode: "ja-JP"
 title: "2Rhythm"
 theme: profile
